tambah keterangan image di setiap image dan ubah name:link jadi class:link

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
                     </tr>
                     <tr>
                         <td>resume</td>
-                        <td name="link"><a href="https://bit.ly/ResumeAzPutra">resume.pdf</a></td>
+                        <td class="link"><a href="https://bit.ly/ResumeAzPutra">resume.pdf</a></td>
                     </tr>
                 </table>
             </div>
             <div class="picture">
-                <img src="./assets/images/myFoto.png">
+                <img src="./assets/images/myFoto.png" alt="fotoCool">
             </div>
         </div>
     </div>
@@ -71,7 +71,7 @@
             <div class="lower">
                 <div class="skills">
                     <div class="pic">
-                        <img src="./assets/images/hacktiv8.png">
+                        <img src="./assets/images/hacktiv8.png" alt="fotoHacktiv">
                     </div>
                     <div class="paragraph" style="border:2px solid #ff0000 ;">
                         <h4>Student Hacktiv8</h4>
@@ -81,7 +81,7 @@
                 </div>
                 <div class="skills">
                     <div class="pic">
-                        <img src="./assets/images/unindra.png">
+                        <img src="./assets/images/unindra.png" alt="fotoUnindra">
                     </div>
                     <div class="paragraph" style="border:2px solid #63b4f7 ;">
                         <h4>Student Universitas Indraprasta PGRI</h4>
@@ -99,7 +99,6 @@
         <div class="container">
             <div class="upper">
                 <h1>about me</h1>
-                <!-- <img src="./assets/images/MyIcon.png"> -->
             </div>
             <div class="lower">
                 <div class="text">
@@ -118,13 +117,17 @@
                     <div class="logo">
                         <div class="icons">
                             <a href="http://www.facebook.com"><img
-                                    src="http://www.valdichianaoutlet.it/public/images/frontend/social/facebook.svg"></a>
+                                    src="http://www.valdichianaoutlet.it/public/images/frontend/social/facebook.svg"
+                                    alt="iconFB"></a>
                             <a href="http://www.twitter.com"><img
-                                    src="https://rewardbus.s3.amazonaws.com/static/img/social/twitter.png"></a>
+                                    src="https://rewardbus.s3.amazonaws.com/static/img/social/twitter.png"
+                                    alt="iconTwitter"></a>
                             <a href="http://www.google.com"><img
-                                    src="https://icons-for-free.com/iconfiles/png/512/google+logo+media+new+plus+social+icon-1320192913617671692.png"></a>
+                                    src="https://icons-for-free.com/iconfiles/png/512/google+logo+media+new+plus+social+icon-1320192913617671692.png"
+                                    alt="iconGmail"></a>
                             <a href="http://www.whatsapp.com"><img
-                                    src="https://2.bp.blogspot.com/-QfS1hyElLFk/XDdD551JV7I/AAAAAAAAGu0/ZwfoMBwMoiUAzSCHhP4QvHn_KyjaeecWQCK4BGAYYCw/s1600/logo%2Bwhatsapp.png"></a>
+                                    src="https://2.bp.blogspot.com/-QfS1hyElLFk/XDdD551JV7I/AAAAAAAAGu0/ZwfoMBwMoiUAzSCHhP4QvHn_KyjaeecWQCK4BGAYYCw/s1600/logo%2Bwhatsapp.png"
+                                    alt="iconWA"></a>
                         </div>
                     </div>
                 </div>
@@ -149,22 +152,22 @@
                 </div>
                 <div class="right">
                     <div class="img">
-                        <img src="./assets/images/MyIcon.png">
+                        <img src="./assets/images/MyIcon.png" alt="project1">
                     </div>
                     <div class="img">
-                        <img src="./assets/images/MyIcon.png">
+                        <img src="./assets/images/MyIcon.png" alt="project2">
                     </div>
                     <div class="img">
-                        <img src="./assets/images/MyIcon.png">
+                        <img src="./assets/images/MyIcon.png" alt="project3">
                     </div>
                     <div class="img">
-                        <img src="./assets/images/MyIcon.png">
+                        <img src="./assets/images/MyIcon.png" alt="project4">
                     </div>
                     <div class="img">
-                        <img src="./assets/images/MyIcon.png">
+                        <img src="./assets/images/MyIcon.png" alt="project5">
                     </div>
                     <div class="img">
-                        <img src="./assets/images/MyIcon.png">
+                        <img src="./assets/images/MyIcon.png" alt="project6">
                     </div>
                 </div>
             </div>
@@ -195,24 +198,24 @@
     <div class="part">
         <div class="container">
             <div class="one">
-                <img src="https://image.flaticon.com/icons/png/128/42/42829.png">
+                <img src="https://image.flaticon.com/icons/png/128/42/42829.png" alt="iconPDone">
                 <h1>1</h1>
                 <p>Projects Done</p>
             </div>
             <div class="two">
-                <img src="https://cdn4.iconfinder.com/data/icons/emotion-6/32/Smile-17-128.png">
+                <img src="https://cdn4.iconfinder.com/data/icons/emotion-6/32/Smile-17-128.png" alt="iconHappy">
                 <h1>1</h1>
                 <p>Happy Clients</p>
             </div>
             <div class="three">
-                <img
-                    src="http://images.clipartpanda.com/smile-clipart-652419-unge-clipart-icon-symbols-shapes-smiley-happy2.png">
+                <img src="http://images.clipartpanda.com/smile-clipart-652419-unge-clipart-icon-symbols-shapes-smiley-happy2.png"
+                    alt="iconSmiley">
                 <h1>0</h1>
                 <p>Hours of Work</p>
             </div>
             <div class="four">
-                <img
-                    src="https://cdn1.iconfinder.com/data/icons/emojis-8/16/lol-smile-happy-emoji-face-emotion-256.png">
+                <img src="https://cdn1.iconfinder.com/data/icons/emojis-8/16/lol-smile-happy-emoji-face-emotion-256.png"
+                    alt="iconSmile">
                 <h1>216</h1>
                 <p>Cup of Coffee</p>
             </div>
@@ -229,34 +232,36 @@
             </div>
             <div class="lower">
                 <div class="services">
-                    <img src="http://cdn.onlinewebfonts.com/svg/img_563438.png">
+                    <img src="http://cdn.onlinewebfonts.com/svg/img_563438.png" alt="webDesign">
                     <p>Web Design</p>
                 </div>
                 <div class="services">
-                    <img
-                        src="https://cdn1.iconfinder.com/data/icons/programing-development-1/24/code_clean_shine_good_coding-512.png">
+                    <img src="https://cdn1.iconfinder.com/data/icons/programing-development-1/24/code_clean_shine_good_coding-512.png"
+                        alt="cleanCode">
                     <p>Clean Code</p>
                 </div>
                 <div class="services">
-                    <img src="https://image.flaticon.com/icons/svg/1541/1541402.svg">
+                    <img src="https://image.flaticon.com/icons/svg/1541/1541402.svg" alt="debugging">
                     <p>Debugging</p>
                 </div>
                 <div class="services">
-                    <img src="https://raw.githubusercontent.com/azputra/tugasWebKelompok/master/image/html.png">
+                    <img src="https://raw.githubusercontent.com/azputra/tugasWebKelompok/master/image/html.png"
+                        alt="html">
                     <p>HTML5</p>
                 </div>
                 <div class="services">
-                    <img src="https://raw.githubusercontent.com/azputra/tugasWebKelompok/master/image/css.png">
+                    <img src="https://raw.githubusercontent.com/azputra/tugasWebKelompok/master/image/css.png"
+                        alt="css">
                     <p>CSS3</p>
                 </div>
                 <div class="services">
-                    <img src="https://raw.githubusercontent.com/azputra/tugasWebKelompok/master/image/javascript.png">
+                    <img src="https://raw.githubusercontent.com/azputra/tugasWebKelompok/master/image/javascript.png"
+                        alt="js">
                     <p>Javascript</p>
                 </div>
             </div>
         </div>
     </div>
-
     <!--end my-services-->
 
     <!--start more-->
@@ -305,13 +310,16 @@
         <div class="container">
             <div class="icons">
                 <a href="http://www.facebook.com"><img
-                        src="http://www.valdichianaoutlet.it/public/images/frontend/social/facebook.svg"></a>
+                        src="http://www.valdichianaoutlet.it/public/images/frontend/social/facebook.svg"
+                        alt="iconFB"></a>
                 <a href="http://www.twitter.com"><img
-                        src="https://rewardbus.s3.amazonaws.com/static/img/social/twitter.png"></a>
+                        src="https://rewardbus.s3.amazonaws.com/static/img/social/twitter.png" alt="iconTwitter"></a>
                 <a href="http://www.google.com"><img
-                        src="https://icons-for-free.com/iconfiles/png/512/google+logo+media+new+plus+social+icon-1320192913617671692.png"></a>
+                        src="https://icons-for-free.com/iconfiles/png/512/google+logo+media+new+plus+social+icon-1320192913617671692.png"
+                        alt="iconGmail"></a>
                 <a href="http://www.whatsapp.com"><img
-                        src="https://2.bp.blogspot.com/-QfS1hyElLFk/XDdD551JV7I/AAAAAAAAGu0/ZwfoMBwMoiUAzSCHhP4QvHn_KyjaeecWQCK4BGAYYCw/s1600/logo%2Bwhatsapp.png"></a>
+                        src="https://2.bp.blogspot.com/-QfS1hyElLFk/XDdD551JV7I/AAAAAAAAGu0/ZwfoMBwMoiUAzSCHhP4QvHn_KyjaeecWQCK4BGAYYCw/s1600/logo%2Bwhatsapp.png"
+                        alt="iconWA"></a>
             </div>
         </div>
     </div>
