tambah keterangan dari image di line 189

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             </div>
 
             <div class="lower">
-                <img src="./assets/images/MyIcon.png">
+                <img src="./assets/images/MyIcon.png" alt="iconPutraCool">
                 <h4>Zul Kipli</h4>
                 <p>Top Markotop Kerjaannya</p>
             </div>
